--- a/config.json
+++ b/config.json
@@ -3,6 +3,9 @@
 	"s":1,
 	"v":1,
 	"mv":1,
-	"uT":""
+	"uT":"",
+	"sT":"रोज़ खेलो पैसे जीतो",
+	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर",
+	"pST":"1651 लोग अभी गेम खेल रहे हैं! टॉप 3 में हैं : Ram Avtar, Rupesh Kumar, Akmar Khan"
 
 }
