--- a/config.json
+++ b/config.json
@@ -3,6 +3,9 @@
 	"s":1,
 	"v":2,
 	"mv":1,
+	"bu":"https://pascolan.in",
+	"hpT":"",
+	"hpS": true,
 	"prize": 1000,
 	"timing": "12:00 to 3:00",
 	"gR":"1. यह गेम रोज़ दोपहर 12 :00 से 3:00 बजे तक ही रहेगा!\n2. इस दौरान आप बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!\n3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!\n4. टाई होने पर जिसने कम समय में गेम ख़तम किया उसको ऊपर का दर्ज़ा दिया जाएगा  ",
