--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 	"v":1,
 	"mv":1,
 	"bu":"https://pascolan.in",
-	"hpT":"",
+	"hpT":"यह ऐप अभी Beta Version में है! कृपया अपने जान पहचान वालों के साथ ही शेयर करें!",
 	"hpS": true,
 	"prize": 1000,
 	"timing": "12:00 to 3:00",
