--- a/config.json
+++ b/config.json
@@ -4,14 +4,14 @@
 	"v":1,
 	"mv":1,
 	"bu":"https://pascolan.in",
-	"hpT":"यह ऐप अभी Beta Version में है! कृपया अपने जान पहचान वालों के साथ ही शेयर करें!",
+	"hpT":"यह ऐप अभी Beta Version में है! अपने दोस्तों को इस आप के बारें में ज़रूर बताएं ",
 	"hpS": true,
-	"prize": 1000,
+	"prize": 1500,
 	"timing": "12:00 to 3:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2-5 : <b>₹50</b><br>Rank 6-10 : <b>₹20</b><br>Rank 11-50 : <b>₹2</b><br>Rank 51- 500 : <b>₹1</b><br><br> 1. यह गेम रोज़ <b>दोपहर 12 :00 से 3:00 बजे</b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. टाई होने पर जिसने कम समय में गेम ख़तम किया उसको ऊपर का दर्ज़ा दिया जाएगा  ",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b>दोपहर 12 :00 से 3:00 बजे</b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. टाई होने पर जिसने कम समय में गेम ख़तम किया उसको ऊपर का दर्ज़ा दिया जाएगा  ",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर",
-	"pST":"1651 लोग अभी गेम खेल रहे हैं! टॉप 3 में हैं : Ram Avtar, Rupesh Kumar, Akmar Khan"
+	"pST":"1651 लोग अभी गेम खेल रहे हैं!"
 
 }
