--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 	"v":1,
 	"mv":1,
 	"bu":"https://pascolan.in",
-	"hpT":"आ गया है Khelo India ऐप! पहला गेम कल यानी 29 December 2019 को होगा! जल्दी से दोस्तों को बताएं!",
+	"hpT":"आ गया है Khelo India ऐप! पहला गेम आज यानी 29 December 2019 को होगा! जल्दी से दोस्तों को बताएं!\"",
 	"hpS": true,
 	"prize": 1500,
 	"timing": "12:00 to 3:00",
