--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	"hpS": true,
 	"prize": 1500,
 	"timing": "8:00 to 10:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b>दोपहर 12 :00 से 3:00 बजे</b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. 3 बजे रिजल्ट आते ही <b>1 घंटे के अंदर पैसे आपके PAYTM वॉलेट</b> में आ जाएंगे  ",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b>दोपहर 12 से 3 बजे और रात 8 -10 </b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. 3 बजे रिजल्ट आते ही <b>1 घंटे के अंदर पैसे आपके PAYTM वॉलेट</b> में आ जाएंगे  ",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment",
