--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
 	"v":1,
 	"mv":1,
 	"bu":"https://pascolan.in",
-	"hpT":"आ गया है Khelo India ऐप! Aaj 12:00 to 3:00 जल्दी से दोस्तों को बताएं!\"",
+	"hpT":"आ गया है Khelo India ऐप! रात 8:00 to 10:00 जल्दी से दोस्तों को बताएं!\"",
 	"hpS": true,
 	"prize": 1500,
-	"timing": "12:00 to 3:00",
+	"timing": "08:00 to 10:00",
 	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b>दोपहर 12 से 3 बजे और रात 8 -10 </b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. 3 बजे रिजल्ट आते ही <b>1 घंटे के अंदर पैसे आपके PAYTM वॉलेट</b> में आ जाएंगे  ",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
