--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
 	"v":1,
 	"mv":1,
 	"bu":"https://pascolan.xyz",
+	"rm":"Welcome to Khelo India App! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment",
 	"hpT":"आ गया है Khelo India ऐप! 8:00 to 10:00 जल्दी से दोस्तों को बताएं!\"",
 	"hpS": true,
 	"prize": 1500,
