--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
-	"pST":"1651 लोग अभी गेम खेल रहे हैं!"
+	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
+    "ref": "Refer this app to your friends, 1 Refer = 1 Rupee"
 
 }
