--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
-    "ref": "Refer this app to your friends, 1 Refer = 1 Rupee"
-
+    "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
+	"wallR": "1. Live game ke paise instant game end hote hi mil jaaenge\n2. Referral ki payment hum koshish karenge bhailog ki instant karein but 1 din max lag sakta hai\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
 }
