--- a/config.json
+++ b/config.json
@@ -9,11 +9,11 @@
 	"hpS": true,
 	"prize": 1500,
 	"timing": "08:00 to 10:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b> रात 8 - 10 </b> तक ही रहेगा!<br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. 10 बजे रिजल्ट आते ही <b>1 घंटे के अंदर पैसे आपके PAYTM वॉलेट</b> में आ जाएंगे  ",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1. यह गेम रोज़ <b> रात 8 - 10 </b> तक ही रहेगा! <br>This game will be daily from 8-10PM <br>2. इस दौरान आप <b>बार बार खेल कर अपनी रैंक बढ़ा सकते हैं!</b><br>During this time you can play for unlimited time<br>3. जितनी ज्यादा स्कोर होगा उतनी ही ज़्यादा रैंक होगी!<br>4. 10 बजे रिजल्ट आते ही <b>1 घंटे के अंदर पैसे आपके PAYTM वॉलेट</b> में आ जाएंगे  <br>Payment will be send after results are declared",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
-	"wallR": "1. Live game ke paise instant game end hote hi mil jaaenge\n2. Referral ki payment hum koshish karenge bhailog ki instant karein but 1 din max lag sakta hai\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
+	"wallR": "1. 8-10 Game money amount will be sent instantly to paytm wallets\n2. Referral Income is sent before 24 hour for sure. If not reached then contact us on Telegram\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
 }
