--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
 	"hpS": true,
 	"prize": 1500,
 	"timing": "08:00 to 10:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1.Game will be live daily between <b> 8 - 10 </b>!<br>2.During this time you can play unlimited or multiple times!</b><br>3.Better you play more you earn<br>4. At the end of game money will be transferred to your PAYTM wallet!",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1.Game will be live daily between <b> 8PM - 10PM </b>!<br>2.During this time you can play unlimited or multiple times!</b><br>4. At the end of game money will be transferred to your PAYTM wallet!<br>5. Do connect with Khelo India Telegram channel for updates!",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
