--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
+	"mT": "This app is under maintainance!\\nWe will be back soon!",
 	"wallR": "1. Live game winning will be sent instantly\n2. For Referral it can take max 1 day only\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
 }
