--- a/config.json
+++ b/config.json
@@ -9,12 +9,12 @@
 	"hpS": true,
 	"prize": 1500,
 	"timing": "08:00 to 10:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br>1.Game will be live daily between <b> 8PM - 10PM </b>!<br>2.During this time you can play unlimited or multiple times!</b><br>4. At the end of game money will be transferred to your PAYTM wallet!<br>5. Do connect with Khelo India Telegram channel for updates!",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 500 : <b>₹1</b><br><b>1</b>.Game will be live daily between <b> 8PM - 10PM </b>!<br><b>2</b>.During this time you can play unlimited or multiple times!</b><br><b>3</b>. At the end of game money will be transferred to your PAYTM wallet!<br><b>4</b>. Do connect with Khelo India Telegram channel for updates!",
 	"uT":"",
 	"sT":"रोज़ खेलो पैसे जीतो",
 	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
-	"mT": "This app is under maintainance!\\nWe will be back soon!",
+	"mT": "This app is under maintainance!\nWe will be back soon!",
 	"wallR": "1. Live game winning will be sent instantly\n2. For Referral it can take max 1 day only\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
 }
