--- a/config.json
+++ b/config.json
@@ -16,5 +16,6 @@
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
 	"mT": "This app is under maintainance!\nWe will be back soon!",
-	"wallR": "1. Live game winning will be sent instantly\n2. For Referral it can take max 1 day only\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
+	"wallR": "1. Live game winning will be sent instantly\n2. For Referral it can take max 1 day only\n3. Check that your Paytm Wallet is Active and KYC Enabled\n4. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban",
+	"wallRV2": "<b>1</b>. Live game winning will be sent instantly\n<b>2</b>. For Referral it can take max 1 day only\n<b>3</b>. Check that your Paytm Wallet is Active and KYC Enabled\n<b>4</b>. Multiple referrals from same device via apps like Parallel Space or Reinstalling will lead to permanent ban"
 }
