--- a/config.json
+++ b/config.json
@@ -4,15 +4,15 @@
 	"v":14,
 	"mv":14,
 	"bu":"https://pascolan.xyz",
-	"rm":"Welcome to Khelo India App! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment",
-	"hpT":"आ गया है Khelo India ऐप! 8:00 to 10:00 जल्दी से दोस्तों को बताएं!\"",
+	"rm":"Welcome to Khelo India App! Play Daily! Win Daily! Instant Paytm Transfer",
+	"hpT":"Khelo India app is here! 8:00 to 10:00 Don't forget to tell your friends",
 	"hpS": true,
 	"prize": 1500,
 	"timing": "08:00 to 10:00",
 	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 50 : <b>₹5</b><br><b>1</b>.Game will be live daily between <b> 8PM - 10PM </b>!<br><b>2</b>.During this time you can play unlimited or multiple times!</b><br><b>3</b>. At the end of game money will be transferred to your PAYTM wallet!<br><b>4</b>. Do connect with Khelo India Telegram channel for updates!",
 	"uT":"",
-	"sT":"रोज़ खेलो पैसे जीतो",
-	"dT":"Kehlo India में आपका स्वागत है! अब रोज़ खेलो और जीतो! सीधा Paytm में पैसे ट्रांसफर #InstantPayment | ध्यान रखना पेमेंट Pascolan Pvt Limited के नाम से आएगी ",
+	"sT":"Play Daily Win Daily",
+	"dT":"Welcome to Khelo India, Play, Daily Win Daily! Direct Instant Paytm transfer of winning amount after every game!",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "Refer this app to your friends, 1 Refer = 1 Rupee",
 	"mT": "This app is under maintainance!\nWe will be back soon!",
