--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
 	"bu":"https://pascolan.xyz",
 	"rm":"Welcome to Khelo India App! Play Daily! Win Daily! Instant Paytm Transfer",
 	"hpT":"Khelo India app is here! 8:00 to 10:00 Don't forget to tell your friends",
+	"fbOnlyAds":false,
 	"hpS": true,
 	"prize": 1500,
 	"timing": "08:00 to 10:00",
