--- a/config.json
+++ b/config.json
@@ -5,12 +5,12 @@
 	"mv":22,
 	"bu":"https://analytics.pascolan.in",
 	"rm":"Welcome to Khelo India App! Play Daily! Win Daily! Instant Paytm Transfer",
-	"hpT":"Khelo India app is here! 8:00 to 10:00 Don't forget to tell your friends",
+	"hpT":"Khelo India app is here! Don't forget to tell your friends",
 	"fbOnlyAds":false,
 	"hpS": true,
 	"prize": 1500,
-	"timing": "08:00 to 10:00",
-	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 50 : <b>₹5</b><br><b>1</b>.Game will be live daily between <b> 8PM - 10PM </b>!<br><b>2</b>.During this time you can play unlimited or multiple times!</b><br><b>3</b>. At the end of game money will be transferred to your PAYTM wallet!<br><b>4</b>. Do connect with Khelo India Telegram channel for updates!",
+	"timing": "Play Khelo India",
+	"gR":"Rank 1 : <b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4- 50 : <b>₹5</b><br><b>1</b>.Play the game max highest score!<br><b>2</b>.Results will be declared at 8PM!</b><br><b>3</b>. At the end of game money will be transferred to your PAYTM wallet!<br><b>4</b>. Do connect with Khelo India Telegram channel for updates!",
 	"uT":"",
 	"sT":"Play Daily Win Daily",
 	"dT":"Welcome to Khelo India, Play, Daily Win Daily! Direct Instant Paytm transfer of winning amount after every game!",
