--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
 	"gR":"Rank 1 :<b>₹500</b><br>Rank 2 : <b>₹300</b><br>Rank 3 : <b>₹200</b><br>Rank 4-500 : <b>₹1</b><br><br><b>1</b>.Play the game and make highest score!<br><b>2</b>.Results will be declared at 10PM!</b><br><b>3</b>. At the end of game money will be transferred to your PAYTM wallet!<br><b>4</b>. Do connect with Khelo India Telegram channel for updates!",
 	"uT":"",
 	"sT":"Play Daily Win Daily",
-	"dT":"THE BIG SPIN DAY TODAY \uD83E\uDD29 GET INSTANT PAYTM CASH 12:00 pm onwards",
+	"dT":"Welcome to Khelo India, Play, Daily Win Daily! Direct Instant Paytm transfer of winning amount after every game!",
 	"pST":"1651 लोग अभी गेम खेल रहे हैं!",
     "ref": "1 Refer = 10 Rupee",
 	"mT": "This app is under maintainance!\nWe will be back soon!",
